...
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

      <ImageView
          android:id="@+id/place_card_image_CardLayout_imageView"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:adjustViewBounds="true"
          android:scaleType="fitXY"
          app:layout_constraintBottom_toBottomOf="parent"
          app:layout_constraintEnd_toEndOf="parent"
...
          android:gravity="start"
          android:text="@string/Price"
          android:textColor="@color/textSecondary"
          android:textSize="18sp" />

      <Button
          android:id="@+id/card_delete_button"
          android:layout_width="100dp"
          android:layout_height="30dp"
          android:layout_marginStart="20dp"
          android:layout_marginBottom="20dp"
          android:background="@drawable/style_primary"
          android:text="@string/card_delete"
...
